⚒️ Fixed some issues with keys, and mobile not showing motion animations and elements

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,8 +14,6 @@
 }
 
 .hash-span {
-  margin-top: -100px;
-  padding-bottom: 100px;
   display: block;
 }
 
